# exomind-team

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  agent.cmd  tmpclaude-7055-cwd
Logs/: 2026-01-16.md  2026-01-19.md  2026-01-20.md
Meetings/: 2026-1-12 计算机生命交流2.md  20260113_录音原文Callout.md  20260119_录音整理.md
Meetings/内部会议/: 2026-01-16 语音讨论.md  2026-01-16 语音讨论整理.md  2026-01-21 agent讨论（原始语音）.md  2026-01-21 agent讨论（整理后）.md  2026-01-24 外心系统Agent使用方法对齐&下周项目计划 两场（原始录音）.md  2026-01-24 外心系统Agent使用方法对齐&下周项目计划 两场（整理后）.md  2026-01-24 外心系统Agent使用方法对齐&下周项目计划 两场（汇总后）.md  20260119_录音整理.md  20260120_录音整理.md  录音整理方法论可视化报告.html  录音整理方法论提炼报告.md
Meetings/组会与汇报/: 2025-03-12 上午 讨论笔记.md  2026-1-12 计算机生命交流2.md  20260113_会议摘要Callout.md  组会240806 强调理论预设：婴儿.md  组会240901 学习计划、AGI宠物.md  组会240908 1C103调试、AGI宠物.md  组会241009 动机-连小雨.md  组会241229.canvas  组会250406 汇报.canvas  组会250411 模块化小车设计.canvas  组会250509.canvas  组会250516.canvas
Projects/AGI-Car-V3/: AGI小车V3A设计.canvas  AGI小车研发整体视图.canvas  AGI工作时间分配.canvas  FreeRTOS实时操作系统.canvas  K230探索.canvas  PY32F030.canvas  Python 科学计算.canvas  UART读取V2小车数据并解包.canvas  V3 ESP32s3 信息采集下位机.canvas  cs1237 多通道驱动.canvas  rv1106g3开发版使用.canvas  供电模块设计.canvas  多路应变片触觉模块设计.canvas  姿态传感器.canvas  小车V2使用.canvas  扬声器设计.canvas  摄像头适配.canvas  散热.canvas  激光测距调试.canvas  电路板设计流程.canvas  编译庐山派K230 canmv固件方法.md  触觉测试板V1.canvas  运动与外壳设计.canvas
agents/: memory-workflow.md
agents/03-分块提交/: agent.md  (+1 more)
exobuffer-app/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
exobuffer-app/src-tauri/: Cargo.toml  tauri.conf.json
(+175 files in other folders)
